APIs/googleapis.com/cloudresourcemanager/v3/java-client/README.md
# openapi-java-client

Cloud Resource Manager API
- API version: v3
  - Build date: 2024-10-12T11:36:39.977186-04:00[America/New_York]
  - Generator version: 7.9.0

Creates, reads, and updates metadata for Google Cloud Platform resource containers.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v3"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v3.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.EffectiveTagsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://cloudresourcemanager.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    EffectiveTagsApi apiInstance = new EffectiveTagsApi(defaultClient);
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    Integer pageSize = 56; // Integer | Optional. The maximum number of effective tags to return in the response. The server allows a maximum of 300 effective tags to return in a single page. If unspecified, the server will use 100 as the default.
    String pageToken = "pageToken_example"; // String | Optional. A pagination token returned from a previous call to `ListEffectiveTags` that indicates from where this listing should continue.
    String parent = "parent_example"; // String | Required. The full resource name of a resource for which you want to list the effective tags. E.g. \"//cloudresourcemanager.googleapis.com/projects/123\"
    try {
      ListEffectiveTagsResponse result = apiInstance.cloudresourcemanagerEffectiveTagsList($xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, pageSize, pageToken, parent);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling EffectiveTagsApi#cloudresourcemanagerEffectiveTagsList");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*EffectiveTagsApi* | [**cloudresourcemanagerEffectiveTagsList**](docs/EffectiveTagsApi.md#cloudresourcemanagerEffectiveTagsList) | **GET** /v3/effectiveTags | 
*FoldersApi* | [**cloudresourcemanagerFoldersCreate**](docs/FoldersApi.md#cloudresourcemanagerFoldersCreate) | **POST** /v3/folders | 
*FoldersApi* | [**cloudresourcemanagerFoldersList**](docs/FoldersApi.md#cloudresourcemanagerFoldersList) | **GET** /v3/folders | 
*FoldersApi* | [**cloudresourcemanagerFoldersSearch**](docs/FoldersApi.md#cloudresourcemanagerFoldersSearch) | **GET** /v3/folders:search | 
*LiensApi* | [**cloudresourcemanagerLiensCreate**](docs/LiensApi.md#cloudresourcemanagerLiensCreate) | **POST** /v3/liens | 
*LiensApi* | [**cloudresourcemanagerLiensList**](docs/LiensApi.md#cloudresourcemanagerLiensList) | **GET** /v3/liens | 
*OrganizationsApi* | [**cloudresourcemanagerOrganizationsSearch**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsSearch) | **GET** /v3/organizations:search | 
*ProjectsApi* | [**cloudresourcemanagerProjectsCreate**](docs/ProjectsApi.md#cloudresourcemanagerProjectsCreate) | **POST** /v3/projects | 
*ProjectsApi* | [**cloudresourcemanagerProjectsList**](docs/ProjectsApi.md#cloudresourcemanagerProjectsList) | **GET** /v3/projects | 
*ProjectsApi* | [**cloudresourcemanagerProjectsMove**](docs/ProjectsApi.md#cloudresourcemanagerProjectsMove) | **POST** /v3/{name}:move | 
*ProjectsApi* | [**cloudresourcemanagerProjectsSearch**](docs/ProjectsApi.md#cloudresourcemanagerProjectsSearch) | **GET** /v3/projects:search | 
*ProjectsApi* | [**cloudresourcemanagerProjectsUndelete**](docs/ProjectsApi.md#cloudresourcemanagerProjectsUndelete) | **POST** /v3/{name}:undelete | 
*TagBindingsApi* | [**cloudresourcemanagerTagBindingsCreate**](docs/TagBindingsApi.md#cloudresourcemanagerTagBindingsCreate) | **POST** /v3/tagBindings | 
*TagBindingsApi* | [**cloudresourcemanagerTagBindingsList**](docs/TagBindingsApi.md#cloudresourcemanagerTagBindingsList) | **GET** /v3/tagBindings | 
*TagKeysApi* | [**cloudresourcemanagerTagKeysCreate**](docs/TagKeysApi.md#cloudresourcemanagerTagKeysCreate) | **POST** /v3/tagKeys | 
*TagKeysApi* | [**cloudresourcemanagerTagKeysGetNamespaced**](docs/TagKeysApi.md#cloudresourcemanagerTagKeysGetNamespaced) | **GET** /v3/tagKeys/namespaced | 
*TagKeysApi* | [**cloudresourcemanagerTagKeysList**](docs/TagKeysApi.md#cloudresourcemanagerTagKeysList) | **GET** /v3/tagKeys | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesCreate**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesCreate) | **POST** /v3/tagValues | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesGet**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesGet) | **GET** /v3/{name} | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesGetIamPolicy**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesGetIamPolicy) | **POST** /v3/{resource}:getIamPolicy | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesGetNamespaced**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesGetNamespaced) | **GET** /v3/tagValues/namespaced | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesList**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesList) | **GET** /v3/tagValues | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesPatch**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesPatch) | **PATCH** /v3/{name} | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesSetIamPolicy**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesSetIamPolicy) | **POST** /v3/{resource}:setIamPolicy | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesTagHoldsCreate**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTagHoldsCreate) | **POST** /v3/{parent}/tagHolds | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesTagHoldsDelete**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTagHoldsDelete) | **DELETE** /v3/{name} | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesTagHoldsList**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTagHoldsList) | **GET** /v3/{parent}/tagHolds | 
*TagValuesApi* | [**cloudresourcemanagerTagValuesTestIamPermissions**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTestIamPermissions) | **POST** /v3/{resource}:testIamPermissions | 


## Documentation for Models

 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [EffectiveTag](docs/EffectiveTag.md)
 - [Expr](docs/Expr.md)
 - [Folder](docs/Folder.md)
 - [FolderOperation](docs/FolderOperation.md)
 - [FolderOperationError](docs/FolderOperationError.md)
 - [GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [GetPolicyOptions](docs/GetPolicyOptions.md)
 - [Lien](docs/Lien.md)
 - [ListEffectiveTagsResponse](docs/ListEffectiveTagsResponse.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [ListLiensResponse](docs/ListLiensResponse.md)
 - [ListProjectsResponse](docs/ListProjectsResponse.md)
 - [ListTagBindingsResponse](docs/ListTagBindingsResponse.md)
 - [ListTagHoldsResponse](docs/ListTagHoldsResponse.md)
 - [ListTagKeysResponse](docs/ListTagKeysResponse.md)
 - [ListTagValuesResponse](docs/ListTagValuesResponse.md)
 - [MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [MoveFolderRequest](docs/MoveFolderRequest.md)
 - [MoveProjectRequest](docs/MoveProjectRequest.md)
 - [Operation](docs/Operation.md)
 - [Organization](docs/Organization.md)
 - [Policy](docs/Policy.md)
 - [Project](docs/Project.md)
 - [ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [SearchFoldersResponse](docs/SearchFoldersResponse.md)
 - [SearchOrganizationsResponse](docs/SearchOrganizationsResponse.md)
 - [SearchProjectsResponse](docs/SearchProjectsResponse.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [Status](docs/Status.md)
 - [TagBinding](docs/TagBinding.md)
 - [TagHold](docs/TagHold.md)
 - [TagKey](docs/TagKey.md)
 - [TagValue](docs/TagValue.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



